@@ -140,6 +140,16 @@ kickstart.enabled=maybe
 
 kickstart.always.transfer=false
 
+#
+# Indicates when wrapper logs should be fetched from the remote site:
+# true	- always transfer wrapper logs
+# false	- only transfer wrapper logs if the job fails
+#
+# Default: false
+#
+
+wrapperlog.always.transfer=false
+
 ###########################################################################
 #                          Throttling options                             #
 ###########################################################################
